feat: lab2
